Fix overflow on mobile

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -21,6 +21,8 @@ body {
   width: 100%;
   height: 100%;
 
+  overflow: hidden;
+
   display: flex;
   flex-direction: row;
 
